portal page added

--- a/index.html
+++ b/index.html
@@ -4,11 +4,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Jennifer's GitHub Home Page</title>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
+    <!-- google fonts -->
+    
+    <link rel="stylesheet" href="styles.css">
+    <title>Jennifer's Portal Page</title>
 </head>
 <body>
     <header>
-        <h1>Jennifer's GitHub Home Page</h1>
+        <h1>Jennifer's Portal Page</h1>
+        <h2>DES175A - Interactive Media II - Winter 2023</h2>
+        <div id="banner"></div>
     </header>
+
+    <main>
+        <article class="firstBox">
+            <div>
+                <h2>Studios</h2>
+                <ul>
+                    <li><a href="">Learning Journal</a></li>
+                    <li><a href="">Mad Libs 2.0</a></li>
+                    <li><a href="">Every Picture</a></li>
+                    <li><a href="">Game On!</a></li>
+                </ul>
+            </div>
+            <div>
+                <h2>Experiments</h2>
+                <ul>
+                    <li><a href="">Experiment 1</a></li>
+                    <li><a href="">Experiment 2</a></li>
+                </ul>   
+            </div>
+        </article>
+
+        <article class="secondBox">
+            <h2>Research & Development</h2>
+            <ul>
+                <li><a href="">Project Brief</a></li>
+                <li><a href="">Design Comp</a></li>
+                <li><a href="">Version 1</a></li>
+                <li><a href="">Version 2 (User Test)</a></li>
+                <li><a href="">User Test Results</a></li>
+            </ul>
+        </article>
+
+        <article class="thirdBox">
+            <h2>Final</h2>
+            <ul>
+                <li><a href="">Final Project</a></li>
+            </ul>
+        </article>
+    </main>
 </body>
+<footer>
+    <p><a href="mailto:jmekim@ucdavis.edu">Email Me</a></p>
+</footer>
 </html>
