--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div>
                 <h2>Studios</h2>
                 <ul>
-                    <li><a href="">Learningggggg Journal</a></li>
+                    <li><a href="">Learning Journal</a></li>
                     <li><a href="">Mad Libs 2.0</a></li>
                     <li><a href="">Every Picture</a></li>
                     <li><a href="">Game On!</a></li>
