--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" rel="stylesheet">
-    <!-- google fonts -->
-    
+    <!-- Gaegu fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Gaegu:wght@300;400;700&family=Montserrat&family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <title>Jennifer's Portal Page</title>
 </head>
@@ -18,7 +20,7 @@
     </header>
 
     <main>
-        <article class="firstBox">
+        <section id="firstBox">
             <div>
                 <h2>Studios</h2>
                 <ul>
@@ -35,9 +37,9 @@
                     <li><a href="">Experiment 2</a></li>
                 </ul>   
             </div>
-        </article>
+        </section>
 
-        <article class="secondBox">
+        <section id="secondBox">
             <h2>Research & Development</h2>
             <ul>
                 <li><a href="">Project Brief</a></li>
@@ -46,17 +48,18 @@
                 <li><a href="">Version 2 (User Test)</a></li>
                 <li><a href="">User Test Results</a></li>
             </ul>
-        </article>
+        </section>
 
-        <article class="thirdBox">
+        <section id="thirdBox">
             <h2>Final</h2>
             <ul>
                 <li><a href="">Final Project</a></li>
             </ul>
-        </article>
+        </section>
     </main>
 </body>
 <footer>
     <p><a href="mailto:jmekim@ucdavis.edu">Email Me</a></p>
+    <p>Jennifer Kim</p>
 </footer>
 </html>
