--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -11,7 +11,7 @@
     <h2>To open the console: 1) right click, 2) go to "Inspect", and 3) click on "Console"</h2>
 
     <script>
-        /*This program prints from 1 to 100, but print "Fizz" when the number is divisible by 3 and "Buzz" if divisible by 5 and not by 3.*/
+        /*This program prints from 1 to 100, but print "Fizz" when the number is divisible by 3 and "Buzz" if divisible by 5 and not 3.*/
         for (i=1; i<101; i++) {
             if (i%3 == 0) {
                 console.log ("Fizz");
