dots added, but fixing location and overflow:hidden has issues

--- a/index.html
+++ b/index.html
@@ -15,10 +15,33 @@
 <body>
     <header>
         <h1>Jennifer's Portal Page</h1>
-        <h2>DES175A - Interactive Media II - Winter 2023</h2>
-        <div id="banner"></div>
+        <h2>DES175A - Interactive Media II <br> Winter 2023</h2>
+        <div id="banner">
+            <div id="bannerBkgd">
+                <img src="images/bannerBkgd.png" alt="banner background image">
+                <div id="dot1">
+                    <img src="images/dot1.png" alt="dot1">
+                </div>
+                <div id="dot2">
+                    <img src="images/dot2.png" alt="dot2">
+                </div>
+                <div id="dot3">
+                    <img src="images/dot3.png" alt="dot3">
+                </div>
+                <div id="dot4">
+                    <img src="images/dot4.png" alt="dot4">
+                </div>
+                <div id="dot5">
+                    <img src="images/dot5.png" alt="dot5">
+                </div>
+                <div id="dot6">
+                    <img src="images/dot6.png" alt="dot6">
+                </div>
+            </div>
+        </div>
     </header>
 
+    </div>
     <main>
         <section id="firstBox">
             <div>
