web view added, errors fixed, assignment submit

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
 <body>
     <header>
         <h1>Jennifer's Portal Page</h1>
-        <h2>DES175A - Interactive Media II <br> Winter 2023</h2>
+        <h2>DES175A - Interactive Media II Winter 2023</h2>
         <div id="banner">
-            <div id="bannerBkgd">
-                <img src="images/bannerBkgd.png" alt="banner background image">
                 <div id="dot1">
                     <img src="images/dot1.png" alt="dot1">
                 </div>
@@ -82,7 +80,6 @@
     </main>
 </body>
 <footer>
-    <p><a href="mailto:jmekim@ucdavis.edu">Email Me</a></p>
-    <p>Jennifer Kim</p>
+    <p><a href="mailto:jmekim@ucdavis.edu">Email Me</a></p> <p>Jennifer Kim</p>
 </footer>
 </html>
