--- a/exp/exp1.html
+++ b/exp/exp1.html
@@ -16,7 +16,7 @@
             if (i%3 == 0) {
                 console.log ("Fizz");
             }
-            else if (i%5 == 0 && i%3 != 0) {
+            else if (i%5 == 0) {
                 console.log ("Buzz");
             }
             else {
