checked codes with validator

--- a/journal/index.html
+++ b/journal/index.html
@@ -6,14 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&family=Quicksand:wght@400;600 rel=stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;600&family=Quicksand:wght@400;600" rel="stylesheet">
     <link rel=stylesheet href="styles.css">
     <title>Learning Journal</title>
 </head>
 <body>
     <h1>01 Learning Journal</h1>
     <article>
-        <date>01/26/2023</date>
+        <P>01/26/2023</P>
         <br>
         <h3>After reading <em>Best practices for form design</em></h3>
         <p>
@@ -29,7 +29,7 @@
         <br>
         <br>
         <p class="additionalInfo">
-            I have recently visited Southwest Airlines website and thought that they have forms that is convenient for the users. For example, when the user inputs the desired airport name, it suggests nearby airpots as well. Also, when the user inputs depart date, the system automatically shifts to return date and shows them the caldendar to click on the date of return.
+            I have recently visited Southwest Airlines website and thought that they have forms that is convenient for the users. For example, when the user inputs the desired airport name, it suggests nearby airpots as well. Also, when the user inputs depart date, the system automatically shifts to return date and shows them the calendar to click on the date of return.
             <br>
             <br>
             <a href="https://www.southwest.com/">Check out Southwest Airlines Website!</a>
