--- a/exp/exp2.html
+++ b/exp/exp2.html
@@ -9,6 +9,7 @@
 <body>
     <h2>Experiment 2</h2>
     <script>
+        /* prompt provides a list of colors and once the user selects one of the colors, the background color changes into that color*/
         var color = prompt('Choose your favorite color from this list: red, blue, yellow, and green!');
 
         var backGround = document.querySelector('body');
