added function and returns

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                 <h2>Experiments</h2>
                 <ul>
                     <li><a href="exp/exp1.html">Experiment 1</a></li>
-                    <li><a href="">Experiment 2</a></li>
+                    <li><a href="exp/exp2.html">Experiment 2</a></li>
                 </ul>   
             </div>
         </section>
