--- a/exp/exp2.html
+++ b/exp/exp2.html
@@ -10,30 +10,34 @@
     <h2>Experiment 2</h2>
     <script>
         /* prompt provides a list of colors and once the user selects one of the colors, the background color changes into that color*/
-        var color = prompt('Choose your favorite color from this list: red, blue, yellow, and green!');
+        var color = prompt('Choose your favorite color from the list: red, blue, yellow, and green!');
+        color = color.toLowerCase();
 
-        var backGround = document.querySelector('body');
+        function colorGen () {
+            var backGround = document.querySelector('body');
 
-        if( color === 'red'){
-            backGround.style.backgroundColor = 'red';
+            if( color === 'red'){
+                backGround.style.backgroundColor = 'red';
+            }
+
+            else if( color === 'blue'){
+                backGround.style.backgroundColor = 'blue';
+            }
+
+            else if( color === 'yellow'){
+                backGround.style.backgroundColor = 'yellow';
+            }
+
+            else if( color === 'green'){
+                backGround.style.backgroundColor = 'green';
+            }
+
+            else{
+                alert('Please select a color from one of the choices');
+            }
         }
 
-        else if( color === 'blue'){
-            backGround.style.backgroundColor = 'blue';
-        }
-
-        else if( color === 'yellow'){
-            backGround.style.backgroundColor = 'yellow';
-        }
-
-        else if( color === 'green'){
-            backGround.style.backgroundColor = 'green';
-        }
-
-        else{
-            alert('Please select a color from one of the choices');
-        }
-
+        colorGen();
     </script>
     
 </body>
