--- a/studio1/index.html
+++ b/studio1/index.html
@@ -15,16 +15,16 @@
 
 </head>
 <body>
-    <article id="intro">
-        <header>THE ESCAPE</header>
-        <img src="images/escape.svg" alt="Escape Image" width="300">
-        <p>|  Escape Now  |</p>
-    </article>  
+    <main>
+        <section id="intro">
+            <header>THE ESCAPE</header>
+            <img src="images/escape.svg" alt="Escape Image" width="300" height=auto>
+            <p>|  Escape Now  |</p>
+        </section>
 
-    <article id="input">
-        <header>PLAN YOUR ESCAPE</header>
-        <img src="images/chalk.png" alt="chalk mark" width="150">
-        <main>
+        <section id="input">
+            <header>PLAN YOUR ESCAPE</header>
+            <img src="images/chalk.png" alt="chalk mark" width="150" height=auto>
             <form>
                 <label for="name"> Your name: </label><input type="text" id="name" required> <br>
                 <label for="place"> Place you like: </label><input type="text" id="place" required><br>
@@ -34,19 +34,19 @@
                 <label for="living"> Any living thing: </label><input type="text" id="living" required><br><br>
                 <input type="submit">
             </form>
-        </main>
-    </article>
+        </section>
 
-    <article id="output">
-        <img src="images/paper.svg" alt="Paper" width="900">
-        <p>
-            Hello (your name), this is a note to help you escape this (place). Before I help you, you have to (verb) for 400 hours or else this note will be useless. Once you have done that, you will walk out this door, and you will see a jumping (noun). Once you pass that area, you will see glowing (plural noun) and you should smile at them to look friendly. If you don't smile, they will run after you. After that, you will arrive at the end and you will know that you have reached the end when you see me. <br>Good luck!
-            <br>
-            <br>
-            From (noun - person)
-        </p>
-        <p class="button">|  Generate Another Plan  |</p>
-    </article>
+        <section id="output">
+            <img src="images/paper.svg" alt="Paper" width="900" height=auto>
+            <p>
+                Hello (your name), this is a note to help you escape this (place). Before I help you, you have to (verb) for 400 hours or else this note will be useless. Once you have done that, you will walk out this door, and you will see a jumping (noun). Once you pass that area, you will see glowing (plural noun) and you should smile at them to look friendly. If you don't smile, they will run after you. After that, you will arrive at the end and you will know that you have reached the end when you see me. <br>Good luck!
+                <br>
+                <br>
+                From (noun - person)
+            </p>
+            <p class="button">|  Generate Another Plan  |</p>
+        </section>
+    </main>
     
 </body>
 </html>
