trying to update again

--- a/studio1/index.html
+++ b/studio1/index.html
@@ -39,7 +39,7 @@
         <section id="output">
             <img src="images/paper.svg" alt="Paper" width="900" height=auto>
             <p>
-                Hello (your name), this is a note to help you escape this (place). Before I help you, you have to (verb) for 400 hours or else this note will be useless. Once you have done that, you will walk out this door, and you will see a jumping (noun). Once you pass that area, you will see glowing (plural noun) and you should smile at them to look friendly. If you don't smile, they will run after you. After that, you will arrive at the end and you will know that you have reached the end when you see me. <br>Good luck!
+                Hello (your name), this is a note to help you escape this (place)! Before I help you, you have to (verb) for 400 hours or else this note will be useless. Once you have done that, you will walk out this door, and you will see a jumping (noun). Once you pass that area, you will see glowing (plural noun) and you should smile at them to look friendly. If you don't smile, they will run after you. After that, you will arrive at the end and you will know that you have reached the end when you see me. <br>Good luck!
                 <br>
                 <br>
                 From (noun - person)
