added second learning journal

--- a/journal/index.html
+++ b/journal/index.html
@@ -11,10 +11,26 @@
     <title>Learning Journal</title>
 </head>
 <body>
-    <h1>01 Learning Journal</h1>
-    <article>
-        <P>01/26/2023</P>
-        <br>
+    <article id="article_two">
+        <h2>02 Learning Journal</h2>
+        <p class="date">02/06/2023</p>
+        <h3>After reading <em>Best Practices for Modals / Overlays / Dialog Windows</em></h3>
+        <p>
+            The article goes in detail about what kind of modal design is effective and what is not. Few of the things that I remember is that there needs to be a descriptive title inside the modal, and the buttons need to be carefully worded. Unlike other UI designs for other parts of the website, I realized how wording greatly impacts the quality of user experience when interacting with the modals; users would heavily rely on words to navigate themselves within the modal.
+            <br>
+            <br>
+            When I have interacted with websites, the modals often displayed subsriptions sign-ups, ongoing sale information, cupon retrieval, and more. The first impression of these modals are similar, but slightly different. Modals like cupons and sales immediately grab my attention and leads me to the specific page that the modal promotes. However, some modals that ask for subscription or sign ups usually negatively impacts my experience with the website, especially when I am in the middle of reading an article.
+            <br>
+            <br>
+            After reading the article, I realized how small overlay on the screen could greatly determine the first impression of the website. However, now I have a question about timing of modal's appearance. Since surprising users with modals is not a good design, when should the user be introduced to the modals?
+            
+        </p>
+        <a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c">Link to the article</a>
+    </article>
+
+    <article id="article_one">
+        <h2>01 Learning Journal</h2>
+        <p class="date">01/26/2023</p>
         <h3>After reading <em>Best practices for form design</em></h3>
         <p>
             Reading the article made me consider designing   from the users' perspective once again. It is very interesting to think about how small features like multiple columns exhausts users when they fill out forms, and how the location of placeholder text could change users' experience with forms.
