--- a/studio1/index.html
+++ b/studio1/index.html
@@ -25,7 +25,7 @@
         <section id="input">
             <header>PLAN YOUR ESCAPE</header>
             <img src="images/chalk.png" alt="chalk mark" width="150" height=auto>
-            <form>
+            <form id="inputForm">
                 <label for="name"> Your name: </label><input type="text" id="name" required> <br>
                 <label for="place"> Place you like: </label><input type="text" id="place" required><br>
                 <label for="action"> Activity you hate: </label><input type="text" id="action" required><br>
