--- a/studio1/index.html
+++ b/studio1/index.html
@@ -16,35 +16,37 @@
 </head>
 <body>
     <main>
-        <section id="intro">
+        <section id="intro" class="show">
             <header>THE ESCAPE</header>
             <img src="images/escape.svg" alt="Escape Image" width="300" height=auto>
-            <p>|  Escape Now  |</p>
+            <p id="begin" class="button">|  Escape Now  |</p>
         </section>
 
-        <section id="input">
+        <section id="input" class="hide">
             <header>PLAN YOUR ESCAPE</header>
             <img src="images/chalk.png" alt="chalk mark" width="150" height=auto>
             <form id="inputForm">
-                <label for="name"> Your name: </label><input type="text" id="name" required> <br>
-                <label for="place"> Place you like: </label><input type="text" id="place" required><br>
-                <label for="action"> Activity you hate: </label><input type="text" id="action" required><br>
-                <label for="object"> Object you own: </label><input type="text" id="object" required><br>
-                <label for="plural"> Name of any place: </label><input type="text" id="plural" required><br>
-                <label for="living"> Any living thing: </label><input type="text" id="living" required><br><br>
-                <input type="submit">
+                <label for="name"> Your name: </label>
+                <input type="text" id="name" required> <br>
+                <label for="place"> Place you like: </label>
+                <input type="text" id="place" required><br>
+                <label for="action"> Activity you hate: </label>
+                <input type="text" id="action" required><br>
+                <label for="object"> Object you own: </label>
+                <input type="text" id="object" required><br>
+                <label for="plural"> Name of any place: </label>
+                <input type="text" id="plural" required><br>
+                <label for="living"> Any living thing: </label>
+                <input type="text" id="living" required><br><br>
+                
+                <input id="submitButton" type="submit">
             </form>
         </section>
 
-        <section id="output">
+        <section id="output" class="hide">
             <img src="images/paper.svg" alt="Paper" width="900" height=auto>
-            <p>
-                Hello (your name), this is a note to help you escape this (place)! Before I help you, you have to (verb) for 400 hours or else this note will be useless. Once you have done that, you will walk out this door, and you will see a jumping (noun). Once you pass that area, you will see glowing (plural noun) and you should smile at them to look friendly. If you don't smile, they will run after you. After that, you will arrive at the end and you will know that you have reached the end when you see me. <br>Good luck!
-                <br>
-                <br>
-                From (noun - person)
-            </p>
-            <p class="button">|  Generate Another Plan  |</p>
+            <article id="madLibs"></article>
+            <p id="again" class="button">|  Generate Another Plan  |</p>
         </section>
     </main>
     
