learning journal 3 added

--- a/journal/index.html
+++ b/journal/index.html
@@ -11,7 +11,23 @@
     <title>Learning Journal</title>
 </head>
 <body>
-    <article id="article_two">
+    <article>
+        <h2>03 Learning Journal</h2>
+        <p class="date">02/08/2023</p>
+        <h3>After reading <em>10 Intriguing Photographs to Teach Close Reading and Visual Thinking Skills</em></h3>
+        <p>
+            It does not sound natural when you say that we <em>read</em> images. However, this article made me realize that when we view any type of photos we are always reading what is happening in the photo and analyzing with our own experiences. Although photo is a type of media that is static and biased, I believe that it provokes viewers' imagination and allows for them to understand different point of views from discussions. 
+            <br>
+            <br>
+            I think that photos are biased in some way because it only shows a small portion of the whole environment and it is from the photographer's perspective. However, this is what makes it great for practicing thinking in others' perspective. It allows for people to think in certain way about the photo and when they discuss it with a group, they could learn something new.
+            <br>
+            <br>
+            As designers, it is crucial to take different perspectives and empathize with the audiences to fullfill their needs. Not only that, I believe that perspective taking is also crucial for navigating this world since most of media we intake are somewhat biased. So, it is important for us to keep practicing visual literacy skills and protect ourselves from false and exaggerated information.
+        </p>
+        <a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c">Link to the article</a>
+    </article>
+
+    <article>
         <h2>02 Learning Journal</h2>
         <p class="date">02/06/2023</p>
         <h3>After reading <em>Best Practices for Modals / Overlays / Dialog Windows</em></h3>
@@ -23,12 +39,11 @@
             <br>
             <br>
             After reading the article, I realized how small overlay on the screen could greatly determine the first impression of the website. However, now I have a question about timing of modal's appearance. Since surprising users with modals is not a good design, when should the user be introduced to the modals?
-            
         </p>
         <a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c">Link to the article</a>
     </article>
 
-    <article id="article_one">
+    <article>
         <h2>01 Learning Journal</h2>
         <p class="date">01/26/2023</p>
         <h3>After reading <em>Best practices for form design</em></h3>
