learning journal update

--- a/journal/index.html
+++ b/journal/index.html
@@ -25,6 +25,14 @@
             As designers, it is crucial to take different perspectives and empathize with the audiences to fullfill their needs. Not only that, I believe that perspective taking is also crucial for navigating this world since most of media we intake are somewhat biased. So, it is important for us to keep practicing visual literacy skills and protect ourselves from false and exaggerated information.
         </p>
         <a href="https://uxplanet.org/best-practices-for-modals-overlays-dialog-windows-c00c66cddd8c">Link to the article</a>
+        <br>
+        <br>
+        <p class="additionalInfo">
+            The website that I found is from the awwwards.com, and it is a website by Falmec. The most interesting part of this website was screen's interactivity with the mouse, where the water wave would follow along the track of the mouse. Also, the overall scrolling experience is very smooth, which is also consistent with the sensation of water. There were also photos that helped explain their products, and those images also scaled according to the scroll direction. Overall, it was an immersive experience and greatly explains what they are trying to promote.
+            <br>
+            <br>
+            <a href="https://water.falmec.com/en/">visit Water By Falmec!</a>
+        </p>
     </article>
 
     <article>
