--- a/studio1/index.html
+++ b/studio1/index.html
@@ -31,7 +31,7 @@
                 <input type="text" id="name" required><br>
                 <label for="place"> Place you like:</label>
                 <input type="text" id="place" required><br>
-                <label for="action"> Activity you hate (e.g- run, skip, move):</label>
+                <label for="action"> Root verb (e.g- run, skip, move):</label>
                 <input type="text" id="action" required><br>
                 <label for="object"> Object you own:</label>
                 <input type="text" id="object" required><br>
