learning journal 4 added

--- a/journal/index.html
+++ b/journal/index.html
@@ -12,6 +12,39 @@
 </head>
 <body>
     <article>
+        <h2>04 Learning Journal</h2>
+        <p class="date">02/15/2023</p>
+        <h3>Visual Thinking Analysis</h3>
+        <figure>
+            <img src="images/mom.png" alt="mom letter image" width="200">
+            <figcaption>Jennifer, 2023</figcaption>
+        </figure>
+        <p>
+            The image is a very short message that is from my mom. The interesting thing about this letter is that it is folded and seems like it has two layers of paper. There are actually many things that viewers woud not know since it is a simple photo. This letter is a UPS sticker letter that my mom sent me on my 21st birthday from Korea, along with flowers and a vase. The crease mark on the letter shows my effort to keep her letter safely in the box that I collect all my letters. 
+            <br>
+            <br>
+            This image is related to my topic because my topic is about reminding viewers of all the people that they have loved and received love throughout their lives. For me, I moved back and forth between Korea and America so frequently that it was very easy for me to forget all the people that I had once created memories with. However, whenever I open my letter collection, I get reminded of all the friends and family members that told me "happy birthday," "I love you," "merry christmas," and "thank you."
+            <br>
+            <br>
+            My archive of letters shows me that I am a great friend, lovable person, and thankful person for at least the people who gave me these letters. This gives me so much courage to live through such stressful time like now where I am doubting myself, feeling like I am not good enough, and being overwhelmed by my own future. As I always try to cheer people around me up no matter how stressed or sad I am, I would like to do the same with this project. I want to cheer up my visitors and tell them that they deserve all the love and gratitude they receive from people who loves them.
+        </p>
+        <p class="breakline">- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - </p>
+        <figure>
+            <img src="images/jamie.png" alt="jamie icecream image" width="300">
+            <figcaption>Jamie, 2023</figcaption>
+        </figure>
+        <p class="additionalInfo">
+            This image is a photograph of 5 hands holding an ice cream in the middle. It seems like Jamie was also part of the friend group and they went to get ice cream together during winter. I can see that it was during winter because of thick clothes and the date on bottom right corner.
+            <br>
+            <br>
+            The most interesting part of the image is that it grabs my attention from the middle of the image, and the hands holding on to the ice cream slowly spreads my eyes towards the outside of the photo. I can also see that they all had favorite flavor in common, the white ice cream, and that they also preferred cone over cup. The photo is not only filled with closed up contents, but also has some pattern going on due to matching ice cream colors.
+            <br>
+            <br>
+            The most obvious part of this photo is that they are all friends and that they are all happy at the moment; they just got their ice creams and they got it with people they like to hang out with. Mysterious part is their identity. We do not know who they are, how they look like, and what face they are making at the moment the photo was taken.
+        </p>
+    </article>
+
+    <article>
         <h2>03 Learning Journal</h2>
         <p class="date">02/08/2023</p>
         <h3>After reading <em>10 Intriguing Photographs to Teach Close Reading and Visual Thinking Skills</em></h3>
