Q has been added

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header>
         <h1>Jennifer's Portal Page</h1>
-        <h2>DES175A - Interactive Media II Winter 2023</h2>
+        <h2>DES175A - Interactive Media II WinterQ 2023</h2>
         <div id="banner">
             <div id="dot1">
                 <img src="images/dot1.png" alt="dot1">
@@ -45,7 +45,7 @@
                 <ul>
                     <li><a href="journal/index.html">Learning Journal</a></li>
                     <li><a href="studio1/index.html">Mad Libs 2.0</a></li>
-                    <li><a href="">Every Picture</a></li>
+                    <li><a href="studio2/index.html">Every Picture</a></li>
                     <li><a href="">Game On!</a></li>
                 </ul>
             </div>
