new changes to studio 2

--- a/studio2/index.html
+++ b/studio2/index.html
@@ -15,7 +15,11 @@
     <title>Jennifer Every Picture</title>
 </head>
 <body>
-    <main>
+    <!-- <header id="landing" class="show">
+        <img src="images/sky.png" alt="Sky Image" width="800">
+        <button>View Jennifer's Letters Now</button>
+    </header> -->
+    <main id="letters" class="hide">
         <section id="part1">
             <article>
                 <h1>Sister</h1>
@@ -34,7 +38,6 @@
                 </p>
             </article>
         </section>
-        
 
         <section id="part2">
             <article>
@@ -50,7 +53,7 @@
                 <br>
                 <h3>Context</h3>
                 <p>
-                    My grandmother gave me this letter as we said good bye before I left to America. We all knew that we won't bee seeing each other for a while so she wrote me a letter talking about how much she is proud of me and how excited she is for my future.
+                    My grandmother gave me this letter as we said good bye before I left to America. We all knew that we won't be seeing each other for a while so she wrote me a letter talking about how much she is proud of me and how excited she is for my future.
                 </p>
             </article>
         </section>
@@ -109,10 +112,13 @@
                 <p>
                     On my birthday, I received a package that my mom ordered from a floral shop. It had a clear vase, roses with other pink flowers, and this sticker letter. I was touched by her gift because I have not been able to celebrate my birthday with none of my family and this letter made me feel like my mom was with me on my birthday.
                 </p>
+                <br>
+                <br>
+                <button id="home">Go Back Home</button>
             </article>
         </section>
+        <figure class="sect1">
+        </figure>
     </main>
-    <figure class="sect1">
-    </figure>
 </body>
 </html>
