additional changes to studio2

--- a/studio2/index.html
+++ b/studio2/index.html
@@ -112,9 +112,9 @@
                 <p>
                     On my birthday, I received a package that my mom ordered from a floral shop. It had a clear vase, roses with other pink flowers, and this sticker letter. I was touched by her gift because I have not been able to celebrate my birthday with none of my family and this letter made me feel like my mom was with me on my birthday.
                 </p>
+                <!-- <br>
                 <br>
-                <br>
-                <button id="home">Go Back Home</button>
+                <button id="home">Go Back Home</button> -->
             </article>
         </section>
         <figure class="sect1">
