learning journal 5 added

--- a/journal/index.html
+++ b/journal/index.html
@@ -12,6 +12,21 @@
 </head>
 <body>
     <article>
+        <h2>05 Learning Journal</h2>
+        <p class="date">02/06/2023</p>
+        <h3>After reading <em>Game Design UX Best Practices</em></h3>
+        <p>
+            I think that the article was mostly focused on mobile games but I definitely learned new psychological decisions behind UI design! It was really interesting to find out how the buttons are intentionally positioned so that users have easier access to the desired button on the easier side. Not only that, I thought that the way advertisements were placed and timed are very specific; they do not allow users to exit the ad but it grants users with special prizes so they would keep watching the ads in the future.
+            <br>
+            <br>
+            Also, this article went in dept about how to make users both comfortable and uncomfortable for the company's benefits. For example, the exit button could be hidden for the first few seconds of the onboarding video to purposely capture users' attention. Although this is not an ideal situation for the users, the game production (our client) would benefit from the designs that the designers made.
+            <br>
+            <br>
+            As I read the article, I was able to compare my previous experience with my mobile games which was very exciting. Back when I was young, I played games as a leisure activity and did not think that many designers would have researched psychological factors and best practices behind all the decisions they have made for the game. The good thing about not only this article, but also other articles is that I am able to think more like a designer as I have daily interactions with devices. For me, getting first hand experience is important when I deeply understand concepts.
+        </p>
+        <a href="https://uxplanet.org/game-design-ux-best-practices-guide-4a3078c32099">Link to the article</a>
+    </article>
+    <article>
         <h2>04 Learning Journal</h2>
         <p class="date">02/15/2023</p>
         <h3>Visual Thinking Analysis</h3>
